<?xml version="1.0"?>
<package>
  <name>tm_rrt</name>
  <version>0.0.0</version>
  <description>The tm_rrt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hargalaten@todo.todo">hargalaten</maintainer>


  <license>TODO</license>

  <!-- Dependencies -->
  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build, exec, and run dependencies are now unified into 'depend' -->
  <depend>rclcpp</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend> <!-- tfはtf2_rosに変更 -->
  <depend>image_transport</depend>

  <!-- Message generation -->
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- Testing -->
  <test_depend>ament_cmake_gtest</test_depend>

  <!-- Export section -->
  <export>
    <!-- ROS2での他のツールのための情報 -->
  </export>
</package>

